--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 .gitignore
+.idea/vcs.xml
 .idea/encodings.xml
 .idea/inspectionProfiles/
 .idea/misc.xml
@@ -7,3 +8,4 @@
 .idea/quanteodstocks.iml
 .idea/workspace.xml
 __pycache__
+.idea
